[package]
name = "smoltcp-nal"
version = "0.1.0"
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
edition = "2018"
license = "MIT"
description = "embedded-nal implementation for smoltcp"
keywords = ["smoltcp", "embedded-nal", "tcp"]
categories = ["network-programming", "no-std"]
repository = "https://github.com/quartiq/smoltcp-nal.git"
resolver = "2"

[features]
default = [ "smoltcp/defmt" ]
async = [ ]

[dependencies]
heapless = { version = "0.7.8", features = ["defmt-impl"] }
embedded-nal = "0.6"
critical-section = "0.2.4"
defmt = ">=0.2.0,<0.4"
cortex-m-rtic = "1"

[dependencies.nanorand]
version = "0.6.1"
default-features = false
features = ["wyrand"]

[dependencies.smoltcp]
git = "https://github.com/datdenkikniet/smoltcp.git"
branch = "unique_packet_id"
features = [
    "medium-ethernet",
    "socket-tcp",
    "socket-dhcpv4",
    "socket-udp",
    "socket-dns",
    "async",
]
default-features = false

[dev-dependencies.smoltcp]
git = "https://github.com/datdenkikniet/smoltcp.git"
branch = "unique_packet_id"
features = [ "alloc", "log" ]
default-features = false

[dev-dependencies.tokio]
version = "1"
features = [ "macros", "rt-multi-thread", "time" ]